Modidfied padding and set up of hotel, main, and restaurant.html

--- a/css/index.css
+++ b/css/index.css
@@ -79,3 +79,12 @@ hr{
 .program{
   margin-top: 100px;
 }
+
+
+/********************************************
+*********** Hotels and Restaurants **********
+********************************************/
+
+.tophr{
+  margin-top: 70px;
+}
